# fftx-demo-extern-app

./: CMakeLists.txt  Makefile  README.md  batch1d_test_driver.cpp  dftbatlib_test.cpp  perf_test_all_driver.cu  perf_test_driver.cpp  perf_test_driver.cu  perf_test_r2c_driver.cu  poissonTest.cpp  psatd_test.cpp  testcompare_device.cu  transformlib_test.cpp  transformlib_test.cu
